<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddIncomeActivity">

    <ImageButton
        android:id="@+id/close_button_add_income"
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:layout_margin="12dp"
        android:background="@drawable/close_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_layout_add_income"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:hint="@string/transaction_name"
            app:errorEnabled="true"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_input_add_income"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/name_selector"
                android:drawablePadding="12dp"
                android:maxLines="1"
                android:inputType="text">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/amount_layout_add_income"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:hint="@string/transaction_amount"
            app:errorEnabled="true"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/amount_input_add_income"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/amount_selector"
                android:drawablePadding="12dp"
                android:maxLines="1"
                android:inputType="numberDecimal">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/date_layout_add_income"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:hint="@string/transaction_date"
            app:errorEnabled="true"
            >

            <EditText
                android:id="@+id/date_input_add_income"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:drawableStart="@drawable/date_selector"
                android:drawablePadding="12dp"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:maxLines="1"
                tools:ignore="SpeakableTextPresentCheck">

            </EditText>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/category_layout_add_income"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:hint="@string/transaction_select_category"
            app:errorEnabled="true"
            >

            <AutoCompleteTextView
                android:id="@+id/category_auto_complete_add_income"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_add_income"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:padding="12dp"
            android:backgroundTint="@color/green"
            android:text="@string/transaction_add_income"
            android:textColor="@android:color/white">

        </Button>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>