<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawerLayout"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/frameLayout"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:menu="@menu/nav_menu"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="12dp"
        android:outlineSpotShadowColor="#882929"
        tools:context=".MainActivity">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_main_balance"
        android:layout_width="388dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:orientation="horizontal"
        app:cardCornerRadius="12dp">

        <LinearLayout
            android:id="@+id/linearLayout_main_balance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="12dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_main_balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_total_balance"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView_main_balance_placeholder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/main_amount_placeholder"
                android:textColor="@color/black"
                android:textSize="30sp" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_main_income_expenses"
        android:layout_width="388dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/card_main_balance"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:orientation="horizontal"
        app:cardCornerRadius="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView_main_income"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_income"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView_main_income_placeholder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_amount_placeholder"
                    android:textColor="#4CAF50"
                    android:textSize="30sp"
                    tools:ignore="TextContrastCheck" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView_main_expenses"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_expenses"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView_main_expense_placeholder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_amount_placeholder"
                    android:textColor="@android:color/holo_red_dark"
                    android:textSize="30sp" />


            </LinearLayout>


        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>


    <LinearLayout
        android:id="@+id/linearLayout_transaction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/card_main_income_expenses"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_main_transactions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="12dp"
            android:layout_weight="0.4"
            android:text="@string/main_transaction"
            android:textAllCaps="true"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView_main_viewall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:layout_weight="0.2"
            android:clickable="true"
            android:gravity="end"
            android:text="@string/main_view_all"
            android:textColor="#000000"
            android:textSize="20sp" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_transactions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayout_transaction" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/button_main_add_transaction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="12dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_add"
            app:backgroundTint="#E44141"
            app:borderWidth="0dp"
            app:tint="@color/white"
            tools:ignore="ImageContrastCheck">

        </com.google.android.material.floatingactionbutton.FloatingActionButton>
    </RelativeLayout>
</androidx.drawerlayout.widget.DrawerLayout>
